# vgi-reghive

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-entrypoint.sh  run_tests.sh  vgi-lint.toml
.github/workflows/: ci.yml  docker-publish.yml  release.yml
ci/: README.md  check-version.sh  preprocess-require.awk  run-integration.sh
crates/reghive-core/: Cargo.toml
crates/reghive-core/examples/: gen_fixtures.rs
crates/reghive-core/src/: baseblock.rs  cursor.rs  hivegen.rs  lib.rs  logparse.rs  valuetype.rs
crates/reghive-core/tests/: proptest_nopanic.rs
crates/reghive-wasm/: Cargo.toml
crates/reghive-wasm/src/: lib.rs
crates/reghive-worker/: Cargo.toml
crates/reghive-worker/src/: arrow_map.rs  lib.rs  main.rs  meta.rs  sample.rs
crates/reghive-worker/src/hive/: mod.rs  open.rs  value.rs  walk.rs
crates/reghive-worker/src/scalar/: hive_info.rs  hive_key.rs  hive_value.rs  io.rs  key_info.rs  logs_applied.rs  mod.rs  version.rs  well_formed.rs
crates/reghive-worker/src/table/: common.rs  hive_subtree.rs  mod.rs  read_hive.rs
crates/reghive-worker/tests/: fuzz_open.rs  integration.rs
test/sql/: basic.test  read_hive.test  scalars.test  subtree.test
tests/hives/: sam.hve  software.hve  system_clean.hve  system_dirty.hve
wasm/: build.sh
