[workspace]
resolver = "2"
members = [
    "crates/reghive-core",
    "crates/reghive-worker",
    "crates/reghive-wasm",
]
# reghive-wasm only makes sense for wasm32-unknown-emscripten (it is a staticlib
# whose ring ops are supplied by emcc's --js-library), so keep it out of the
# default set: bare `cargo build` / `test` / `clippy` stay native-only and
# unchanged. Build it explicitly with `wasm/build.sh` or `-p reghive-wasm`.
default-members = ["crates/reghive-core", "crates/reghive-worker"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.97"
license = "MIT"
authors = ["Query Farm LLC <hello@query.farm>"]
repository = "https://github.com/Query-farm/vgi-reghive"

[workspace.dependencies]
# VGI Rust SDK (worker side), published on crates.io. 0.24 provides the wasm
# `vgi::wasm_worker!` macro used by reghive-wasm; requires rustc 1.97 (see
# rust-version above). Base (feature-less) so each target can opt in: the native
# build takes the SDK's real defaults (`sqlite` + `transport-http`), while the
# wasm build must NOT — tokio/mio/axum and bundled SQLite do not compile for
# wasm32, and the browser transport serves over a byte channel rather than HTTP.
vgi = { version = "0.24", default-features = false }
vgi-rpc = { version = "0.16", default-features = false, features = ["macros"] }
arrow-array = "59"
arrow-buffer = "59"
arrow-schema = "59"
# Offline Windows Registry (regf) parser: transaction-log application + deleted/
# modified key+value recovery. Apache-2.0 (NOT the GPL nt-hive / nt_hive2 crates).
notatin = "1.0.1"
chrono = { version = "0.4", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# notatin depends on crossterm only for progress-cursor output (cursor /
# QueueableCommand in progress.rs) but pulls its DEFAULT features, whose `events`
# feature drags in `mio` (gated cfg(unix), which is TRUE for emscripten). `mio`
# has no wasm32-unknown-emscripten backend, so the browser build fails to compile
# it. This patch swaps in a vendored crossterm 0.29.0 identical to upstream except
# that `events` is dropped from `default` — nothing in this workspace uses
# crossterm events, so mio leaves the graph on every target and notatin's
# cursor/command usage is unaffected. (Native is unchanged in behavior; it simply
# no longer compiles the unused mio.)
[patch.crates-io]
crossterm = { path = "vendor/crossterm" }

[profile.release]
opt-level = 2
# Strip symbols + debug info from the release binary. The worker has no need for
# in-binary backtraces in production; build a debug profile locally for symbols.
strip = true
