[package]
name = "reghive-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Pure, dependency-light helpers for the vgi-reghive worker: regf base-block parsing, REG_* value-type mapping/coercion, transaction-log format detection, the file-glob scan cursor, and a synthetic-hive builder for tests."

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
proptest = "1"
