[package]
name = "reghive-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "VGI worker that parses Windows Registry hive files (regf) into typed key/value rows for DFIR — transaction-log replay and deleted-cell recovery over Apache Arrow in DuckDB"

[[bin]]
name = "reghive-worker"
path = "src/main.rs"

[lib]
name = "reghive_worker"
path = "src/lib.rs"

[dependencies]
reghive-core = { path = "../reghive-core" }
arrow-array.workspace = true
arrow-buffer.workspace = true
arrow-schema.workspace = true
notatin.workspace = true
chrono.workspace = true
glob = "0.3"
log = "0.4"

# --- Native ---------------------------------------------------------------
# The SDK's real default features — unchanged from before the wasm split.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
vgi = { workspace = true, features = ["sqlite", "transport-http"] }
vgi-rpc = { workspace = true, features = ["http"] }
env_logger = "0.11"

# --- wasm32 ---------------------------------------------------------------
# No sqlite (C) and no HTTP transport (tokio/mio/axum); the bincode stream codec
# is what the SAB byte-channel transport needs. No env_logger.
[target.'cfg(target_arch = "wasm32")'.dependencies]
vgi = { workspace = true }
vgi-rpc = { workspace = true, features = ["stream-codec"] }

[dev-dependencies]
proptest = "1"
